Fix long book name overflowing

--- a/styles.css
+++ b/styles.css
@@ -120,5 +120,7 @@ select {
 
 .card div {
     text-align: center;
+    overflow-wrap: break-word;
+    max-width: 300px;
 }
 
